--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
 
         <div data-widget="m-connect"
-             data-grant-type="token"
-             data-client-id="b1616a510e3646217c9dd12530605b55572715bd1d415c0f53c62070da24572c"
-             data-app-name="Showcase App"
-             data-redirect-uri="http://file:///C:/Users/dillo/Desktop/Website/index.html"
-             data-network="1">
+             data-grant-type="signature"
+             data-client-id="96c1d2d1bee491b271a9463b1b950b359c06a0ce750690314753b6d9a62fd2c4"
+             data-app-name="NFTShowcase"
+             data-redirect-uri="https://dcor623.github.io/Website/"
+             data-network="5">
         </div>
 
     </section>
