--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     </script>
     <div>
         <div data-widget="m-connect"
+             data-grant-type="signature"
              data-app-name="NFTShowcase"
              data-client-id="96c1d2d1bee491b271a9463b1b950b359c06a0ce750690314753b6d9a62fd2c4"
+             data-redirect-uri="https://dcor623.github.io/Website/"
              data-network="5"
              style="margin-top: 10px; margin-bottom: 10px; display: flex; flex-direction: row; justify-content: center;">
             <div id="nfts"></div>
