--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
              style="margin-top: 10px; margin-bottom: 10px; display: flex; flex-direction: row; justify-content: center;">
             <div id="nfts"></div>
         </div>
+        </div>
 </body>
 </html>
