--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
              data-app-name="NFTShowcase"
              data-client-id="96c1d2d1bee491b271a9463b1b950b359c06a0ce750690314753b6d9a62fd2c4"
              data-network="5"
-             style="margin-top: 10px; margin-bottom: 10px; display: flex; flex-direction: row; justify-content: center;">
-            <div id="nfts">
-            </div>
-        </div>
-        </div>
+             style="margin-top: 10px; margin-bottom: 10px; display: flex; flex-direction: row; justify-content: center;"
+             >
+         </div>
+         <div id="nfts"></div>
 </body>
 </html>
